# miniature-computing-machine

./: .gitignore  CMakeLists.txt
.codeatlas/: project-index.json
Assets/: .initial
Scripts/: circle_script.lua  main.lua  programming.lua  rect_script.lua  triangle_script.lua
SourceFiles/: mental.cpp
SourceFiles/.codeatlas/: project-index.json
SourceFiles/Graphics/: CMentalRenderer.cpp  CMentalRenderer.h  CMentalWindow.cpp  CMentalWindow.h
SourceFiles/Graphics/Objects/: Any2DObject.h  LuaScript.cpp  LuaScript.h  Material.h
SourceFiles/Graphics/Objects/Shader/: Shader.h
